--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/nodemailer": "^7.0.3",
+    "appwrite": "^21.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "install": "^0.13.0",
     "lucide-react": "^0.545.0",
     "next": "^15.5.6",
+    "node-appwrite": "^20.2.1",
+    "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
