--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
@@ -19,6 +20,7 @@
     "critters": "^0.0.23",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
+    "iconoir-react": "^7.11.0",
     "install": "^0.13.0",
     "lucide-react": "^0.545.0",
     "next": "^15.5.6",
