--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@types/nodemailer": "^7.0.3",
     "appwrite": "^21.2.1",
     "class-variance-authority": "^0.7.1",
@@ -23,12 +25,13 @@
     "iconoir-react": "^7.11.0",
     "install": "^0.13.0",
     "lucide-react": "^0.545.0",
-    "next": "^15.5.6",
+    "next": "^16.0.1",
     "node-appwrite": "^20.2.1",
     "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
