feat(services): add state-specific real estate audit pages and components
refactor(services): restructure service components into pagerefactors directory
docs(services): update compliance references from ASIC to regulatory
style: remove empty lines in pricing-client.tsx
build: add @xyflow/react and react-xarrows dependencies

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@types/nodemailer": "^7.0.3",
+    "@xyflow/react": "^12.9.2",
     "appwrite": "^21.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -30,6 +31,7 @@
     "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-xarrows": "^2.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
