--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "appwrite": "^21.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookieconsent": "^3.1.1",
     "critters": "^0.0.23",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/cookieconsent": "^3.1.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
