--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "next": "^16.0.10",
     "node-appwrite": "^20.2.1",
     "nodemailer": "^7.0.10",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-xarrows": "^2.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
@@ -45,7 +45,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.10",
+    "eslint-config-next": "^16.0.10",
     "lighthouse": "^13.0.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
